--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ cachetools==5.0.0
 certifi==2020.6.20
 cffi==1.15.0
 chardet==4.0.0
-cliapp==1.20180812.1
+cliapp==1.0.9
 click==8.0.3
 cmdtest==0.32+git
 colorama==0.4.4
