--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cffi==1.15.0
 chardet==4.0.0
 cliapp==1.0.9
 click==8.0.3
-cmdtest==0.32+git
+cmdtest==0.1.1
 colorama==0.4.4
 command-not-found==0.3
 cryptography==36.0.2
